== Trunk

* Applied patch from Josh Knowles to support 'string_or_response.should have_text(...)'. Closes LH[#193].
* Applied patch from Ian Dees to quiet the Story Runner backtrace. Closes LH[#183].

== Version 1.1.1

Bug fix release.

* Fix regression in 1.1.0 that caused transactions to not get rolled back between examples.
* Applied patch from Bob Cotton to reintroduce ExampleGroup.description_options. Closes LH[#186]

== Version 1.1.0

The "tell me a story and go nest yourself" release.

* Applied patch from Mike Vincent to handle generators rails > 2.0.1. Closes LH[#181]
* Formatter.pending signature changed so it gets passed an ExampleGroup instance instead of the name ( LH[#180])
* Fixed LH[#180] Spec::Rails::Example::ModelExampleGroup and friends show up in rspec/rails output
* Spec::Rails no longer loads ActiveRecord extensions if it's disablet in config/boot.rb
* Applied LH[#178] small annoyances running specs with warnings enabled (Patch from Mikko Lehtonen)
* Tighter integration with Rails fixtures. Take advantage of fixture caching to get performance improvements (Thanks to Pat Maddox, Nick Kallen, Jonathan Barnes, and Curtis)

== Version 1.1.0-RC1

Textmate Bundle users - this release adds a new RSpec bundle that highlights describe, it, before and after and
provides navigation to descriptions and examples (rather than classes and methods). When you first install this,
it is going to try to hijack all of your .rb files. All you need to do is open a .rb file that does not end with
'spec.rb' and change the bundle selection from RSpec to Ruby. TextMate will do the right thing from then on.

Shortcuts for tab-activated snippets all follow the TextMate convention of 2 or 3 letters of the first word, followed by the first letter of each subsequent word. So "should have_at_least" would be triggered by shhal.
